refactor: 使用 Injectable 处理 对 Inject 类型的筛选