@@ -6,7 +6,7 @@ import java.lang.reflect.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static java.util.Arrays.stream;
 import static java.util.Collections.reverse;
@@ -57,7 +57,7 @@ class InjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
         List<Field> injectFields = new ArrayList<>();
         Class<?> current = component;
         while (current != Object.class) {
-            injectFields.addAll(stream(current.getDeclaredFields()).filter(f -> f.isAnnotationPresent(Inject.class)).toList());
+            injectFields.addAll(injectable(current.getDeclaredFields()).toList());
             current = current.getSuperclass();
         }
         return injectFields;
@@ -67,7 +67,7 @@ class InjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
         List<Method> injectMethods = new ArrayList<>();
         Class<?> current = component;
         while (current != Object.class) {
-            injectMethods.addAll(stream(current.getDeclaredMethods()).filter(m -> m.isAnnotationPresent(Inject.class))
+            injectMethods.addAll(injectable(current.getDeclaredMethods())
                     .filter(m -> injectMethods.stream().noneMatch(o -> o.getName().equals(m.getName()) &&
                             Arrays.equals(o.getParameterTypes(), m.getParameterTypes())
                     ))
@@ -80,8 +80,8 @@ class InjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
         return injectMethods;
     }
 
-    private <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
-        List<Constructor<?>> injectConstructors = stream(implementation.getConstructors()).filter(c -> c.isAnnotationPresent(Inject.class)).collect(Collectors.toList());
+    private static <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
+        List<Constructor<?>> injectConstructors = injectable(implementation.getConstructors()).toList();
 
         if (injectConstructors.size() > 1) throw new IllegalComponentException();
 
@@ -101,4 +101,7 @@ class InjectionProvider<T> implements ContextConfig.ComponentProvider<T> {
                 injectMethods.stream().flatMap(m -> stream(m.getParameterTypes()))).toList();
     }
 
+    private static <T extends AnnotatedElement> Stream<T> injectable(T[] declaredFields) {
+        return stream(declaredFields).filter(f -> f.isAnnotationPresent(Inject.class));
+    }
 }
